# utilities

./: .gitignore  config.hcl
client/: README.md
client/api-services/: api.py  app.py  create_indexes.py  db.py  secret.py  utils.py
client/api-services/routes/: players.py
client/api-services/tests/: conftest.py  test_app.py
client/hockey-dashboard/: README.md
client/hockey-dashboard/api-services/: .env.example  api.py  db.py  players.py  teams.py
client/hockey-dashboard/frontend/: package-lock.json  package.json
client/hockey-dashboard/frontend/src/: App.js  App.module.css  api.js
client/hockey-dashboard/frontend_new/public/: index.html
client/web/: package-lock.json  package.json
client/web/public/: index.html
client/web/src/: App.js  App.test.js  api.js  api.test.js  index.css  setupTests.js
client/web/src/components/: AgingOutPlayersModal.js  AgingOutPlayersModal.module.css  Charts.js  Charts.module.css  Filters.js  Filters.module.css  LeaguesView.js  LeaguesView.module.css  MetricCards.js  (+17 more)
common/: __init__.py  config.py  test_config.py
db/backups/: league_members.metadata.json  players.bson  stats.metadata.json  teams.bson  teams.metadata.json
db/scripts/: backup.sh  restore.sh
elite_prospects_db/: league_members.bson  players.metadata.json  stats.bson
ep_scraper/: .env.example  README.md  pyproject.toml
ep_scraper/ep_scraper/: __init__.py  config.py
ep_scraper/ep_scraper/db/: mongo.py
ep_scraper/ep_scraper/models/: __init__.py  player.py  stats.py  team.py
ep_scraper/ep_scraper/scrapers/: base.py  organization.py  players.py  stats.py  teams.py
ep_scraper/ep_scraper/scripts/: run_all.py  run_organizations.py  run_players.py  run_stats.py  run_teams.py
ep_scraper/ep_scraper/utils/: __init__.py  helpers.py  http.py  logger.py
ep_scraper/tests/: test_helpers.py  test_models.py  test_scrapers.py
server/: .gitignore  README.md  __init__.py  config.py  organization.py  player_stats.py  players.py  pyproject.toml  teams.py
server/db/: __init__.py  mongo.py
server/models/: player.py  stats.py  team.py
server/scrapers/: __init__.py  base.py  organization.py  player_history.py  players.py  scrap_stats.py  stats.py  teams.py
server/scripts/: run_all.py  run_organizations.py  run_players.py  run_stats.py  run_teams.py
server/tests/: test_helpers.py  test_models.py  test_scrapers.py
server/utils/: helpers.py  http.py  logger.py
server_legacy/: organization.py  player_stats.py  players.py  teams.py
(+16 files in other folders)
