[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ep-scraper"
version = "1.0.0"
description = "EliteProspects hockey data scraper — organisation → teams → players → stats pipeline"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]

dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    "pymongo>=4.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.25.0",
    "mongomock>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
ep-run-all       = "ep_scraper.scripts.run_all:main"
ep-organizations = "ep_scraper.scripts.run_organizations:main"
ep-teams         = "ep_scraper.scripts.run_teams:main"
ep-players       = "ep_scraper.scripts.run_players:main"
ep-stats         = "ep_scraper.scripts.run_stats:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ep_scraper*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
